--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -1,3 +1,6 @@
+Load:
+  PreloadSetting: '正在预载配置文件!'
+  PreloadData: '正在预载数据文件!'
 Enable:
   Language: '系统语言环境为：中文'
   Database: '当前使用的数据库为：%s'
@@ -5,4 +8,5 @@ Enable:
   SlimeWorldManagerIsNull: 'SlimeWorldManager插件不存在，正在移除兼容流程...'
   SlimeWorldManagerDatabase: '正在引导SlimeWorldManager使用数据库%s'
   SlimeWorldManagerBuildWorld: '正在构建SlimeWorldManger加载模型...'
-  SlimeWorldManagerDatabaseError: '引导SlimeWorldManager失败，正在尝试引导使用其他引导！'
+  SlimeWorldManagerBuildModerInfo: '当前世界模板构建成功！'
+  SlimeWorldManagerDatabaseError: '引导SlimeWorldManager失败，请检测SlimeWorldManger配置！当前正在使用Bukkit操作世界。'
