Fixbug 2021年1月26日00点55分
[+] 命令注册失败，已修复

--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -20,3 +20,6 @@ Enable:
   PreloadWorldSize: 'The number of worlds currently required to be preloaded is: %s'
   PreloadBuildStart: 'Preloading the world...'
   PreloadBuildEnd: 'The preload world is over! The newly added pre-loaded world list is: %s'
+Command:
+  logger:
+    NoConsole: 'This command is only available in the background! Please use the background to execute this command. '
