Fixbug 2021年1月27日22点37分
[+] 对玩家进入逻辑追加预载世界失败进行了修复

--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -31,3 +31,6 @@ Command:
     WARN: 'Sample warning level output'
     ERROR: 'Example of wrong level output'
     FATAL: 'Example of fatal level output'
+Event:
+  Login:
+    Kick_Other: 'You cannot enter the game because of a world allocation error. Please try again! '
