--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -31,6 +31,9 @@ Command:
     WARN: '警告的级别输出示例'
     ERROR: '错误的级别输出示例'
     FATAL: '致命的级别输出示例'
+  Teleport:
+    ErrorTitle : '传送错误'
+    ErrorSubTitle  : '世界已锁定'
 Event:
   Login:
     Kick_Other: '因为世界分配出现错误，导致您无法进入游戏。请重试！'
